# autism-jdc

./: .gitignore  GETTING_STARTED.txt  README.md  pyproject.toml  requirements.txt
config/: config.yaml
configs/: eval_config.yaml  train_config.yaml
dataset/: make_dataset.py  split_dataset.py  test_dataset.json  validation_dataset.json
scripts/: evaluate.py  test_installation.py  train.py
src/: __init__.py  config.py  container.py  examples.py  main.py
src/application/: __init__.py  services.py
src/application/ports/: __init__.py  evaluator_port.py  model_port.py  repository_port.py
src/application/use_cases/: evaluate_use_case.py  inference_use_case.py  train_use_case.py
src/data/: dataset.py
src/domain/: __init__.py  entities.py  exceptions.py  interfaces.py  types.py  value_objects.py
src/inference/: generator.py  parser.py
src/infrastructure/: __init__.py  data_loader.py  llm.py  metrics.py  parsing.py
src/infrastructure/adapters/: json_dataset_repository.py  sklearn_evaluator_service.py  unsloth_model_service.py
src/infrastructure/config/: __init__.py  config_loader.py
src/modeling/: model_loader.py
src/utils/: config.py  metrics.py
