[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jdc"
version = "1.0.0"
description = "Justification-Driven Classification: QLoRA fine-tuning of Llama 3 for ableism detection"
readme = "README.md"
requires-python = "<3.14,>=3.11"
license = { text = "MIT" }
keywords = ["nlp", "ableism", "fine-tuning", "unsloth", "qlora", "llama3"]
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "unsloth (>=2026.2.1,<2027.0.0)",
    "transformers (==4.57.6)",
    "peft (>=0.18.1,<0.19.0)",
    "trl (==0.24.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "datasets (==4.3.0)",
    "bitsandbytes (>=0.49.2,<0.50.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "typer (>=0.24.1,<0.25.0)"
]
[project.scripts]
jdc = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ============================================================
# mypy — strict mode
# ============================================================
[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = false
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true

# Allow missing stubs for ML libraries that don't ship type info
[[tool.mypy.overrides]]
module = [
    "unsloth.*",
    "peft.*",
    "trl.*",
    "bitsandbytes.*",
    "transformers.*",
    "datasets.*",
    "accelerate.*",
    "sklearn.*",
    "omegaconf.*",
    "hydra.*",
    "loguru.*",
]
ignore_missing_imports = true

# ============================================================
# ruff — linting & formatting (optional but recommended)
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
