[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jdc"
version = "1.0.0"
description = "Justification-Driven Classification: QLoRA fine-tuning of Llama 3 for ableism detection"
readme = "README.md"
requires-python = "<3.14,>=3.11"
license = { text = "MIT" }
keywords = ["nlp", "ableism", "fine-tuning", "unsloth", "qlora", "llama3"]
dependencies = [
]
[project.scripts]
jdc = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ============================================================
# mypy — strict mode
# ============================================================
[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = false
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true

# Allow missing stubs for ML libraries that don't ship type info
[[tool.mypy.overrides]]
module = [
    "unsloth.*",
    "peft.*",
    "trl.*",
    "bitsandbytes.*",
    "transformers.*",
    "datasets.*",
    "accelerate.*",
    "sklearn.*",
    "omegaconf.*",
    "hydra.*",
    "loguru.*",
]
ignore_missing_imports = true

# ============================================================
# ruff — linting & formatting (optional but recommended)
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
